# python_training

./: .gitignore  README.md
01_poetry/: DOCS.md
01_poetry/01_poetry_automatic_demo/: pyproject.toml
01_poetry/02_poetry_manual_demo/: pyproject.toml
01_poetry/03_poetry_pre_existing_demo/: pyproject.toml
