[project]
name = "01-poetry-automatic-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Sarapura",email = "gustavo.sarapura7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "01_poetry_automatic_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
